--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -26,13 +26,17 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@angular/localize": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
+    "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-sonarqube-reporter": "^1.4.0",
+    "karma-viewport": "^1.0.9",
     "typescript": "~5.0.2"
   }
 }
