added basic frontend structure with tests

--- a/frontend-angular/tsconfig.spec.json
+++ b/frontend-angular/tsconfig.spec.json
@@ -5,7 +5,8 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine",
-      "karma-viewport"
+      "karma-viewport",
+      "@angular/localize"
     ]
   },
   "files": [
