--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-json-error-handler": "^5.0.4",
     "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "log4js": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.31.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
@@ -21,6 +24,7 @@
     "mocha-sonarqube-reporter": "^1.0.2",
     "mochawesome": "^7.1.3",
     "mochawesome-report-generator": "^6.2.0",
+    "sequelize-cli": "^6.6.0",
     "tap": "^16.3.4",
     "util.promisify": "^1.1.2"
   }
