--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "nyc mocha --timeout=3000 --reporter mocha-multi-reporters --reporter-options configFile=.mocharc.json"
+    "test": "nyc mocha -t 3000 --reporter mocha-multi-reporters --reporter-options configFile=.mocharc.json"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,7 +12,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-json-error-handler": "^5.0.4",
-    "http-errors": "~1.6.3",
+    "http-status-codes": "^2.2.0",
     "log4js": "^6.9.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
@@ -25,6 +25,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-report-generator": "^6.2.0",
     "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3",
     "tap": "^16.3.4",
     "util.promisify": "^1.1.2"
   }
