--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.sourceEncoding=UTF-8
-sonar.sources=src
+sonar.sources=src/controllers
 sonar.exclusions=**/node_modules/**
-sonar.tests=src
+sonar.tests=src/controllers
 sonar.test.inclusions=**/*.spec.js
 sonar.javascript.lcov.reportPaths=reports/lcov.info
 sonar.testExecutionReportPaths=reports/sonarqube.xml
