--- a/backend/.nycrc.json
+++ b/backend/.nycrc.json
@@ -3,5 +3,8 @@
   "include": ["src/controllers"],
   "exclude": ["**/node_modules/**"],
   "reporter": ["lcovonly"],
-  "report-dir": "./reports"
+  "report-dir": "./reports",
+  "lines": 80,
+  "functions": 80,
+  "statements": 80
 }
