--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
     "log4js": "^6.9.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "mocha-multi-reporters": "^1.5.1",
     "mocha-sonarqube-reporter": "^1.0.2",
